# tibia-data-api-client

./: LICENSE  README.md  pyproject.toml
tibia_data_api_client/: __init__.py
tibia_data_api_client/api/boostable_bosses/: get_v3_boostablebosses.py
tibia_data_api_client/api/characters/: get_v3_character_name.py
tibia_data_api_client/api/creatures/: get_v3_creature_race.py  get_v3_creatures.py
tibia_data_api_client/api/fansites/: get_v3_fansites.py
tibia_data_api_client/api/guilds/: get_v3_guild_name.py  get_v3_guilds_world.py
tibia_data_api_client/models/: __init__.py  get_v3_highscores_world_category_vocation_page_category.py  get_v3_highscores_world_category_vocation_page_vocation.py  main_account_badges.py  main_account_information.py  main_achievements.py  main_boostable_bosses_container.py  main_boostable_bosses_overview_response.py  main_character.py  main_character_guild.py  main_character_response.py  main_characters.py  main_content_type.py  main_creature.py  main_creature_response.py  main_creatures_container.py  main_creatures_overview_response.py  main_deaths.py  main_entry.py  main_fansite.py  main_fansites.py  main_fansites_response.py  main_guild.py  main_guild_member.py  main_guild_response.py  main_guildhall.py  main_guilds.py  main_guilds_overview_response.py  main_highscore.py  main_highscore_page.py  main_highscores.py  main_highscores_response.py  main_house.py  main_house_auction.py  main_house_rental.py  main_house_response.py  main_house_status.py  main_houses.py  main_houses_auction.py  main_houses_house.py  (+33 more)
(+13 files in other folders)
